<resources>
    <string name="app_name">Atmik</string>
    <string name="create_profile">Create Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male_select">male select</string>
    <string name="female_select">female select</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="hey_i_am">Hey! I am.</string>
    <string name="friends_call_me">Friends call me</string>
    <string name="birth_date">BIRTH- DATE</string>
    <string name="call_me_on">Call me on</string>
    <string name="face">face</string>
    <string name="customize_profile">Customize Profile</string>
    <string name="select_costume">select costume</string>
    <string name="enter_name_error">Please enter your name.</string>
    <string name="enter_nickname_error">Please enter a nickname.</string>
    <string name="enter_birthdate_error">Please enter your birthdate.</string>
    <string name="enter_phone_error">Please enter a valid phone number.</string>
    <string name="outfits">Outfits</string>
    <string name="search">search</string>
    <string name="new_entry">new entry</string>
    <string name="new_journal">new journal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_journal_s_name">New Journal\'s Name</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="new_entry_name">New Entry Name</string>
    <string name="undo">undo</string>
</resources>