
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purple_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/new_entry_name"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:id="@+id/nameofJournal"
        android:background="@drawable/my_edittext_bg"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            style="@style/MyButton"
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginStart="5dp" />
        <Button
            style="@style/MyButton"
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

</LinearLayout>
